preset: Add dedicated "comment" field
As discussed in #22602, JSON does not allow comments. In order to help project authors document their CMakePresets.json
content, we can add a comment
field. It would be allowed in a preset and structurally part of the document under the JSON spec, but would have no semantic meaning.