presets: Allow comments in presets files

Co-authored-by: Kanaiym <abdigak@clarkson.edu>
Fixes: #22791